--- a/citybike_step_25.html
+++ b/citybike_step_25.html
@@ -10,6 +10,7 @@
       .x.axis path { display: none; }
       .x.axis text { display: none; }
       .chartLabel { font-size: 14px; }
+      .chartDataLabel { font-size: 14px; }
     </style>
 	</head>
 	<body>
@@ -36,8 +37,8 @@
 	  </div>
     <script>
     
-    // Variables Governing Total Dashboard
-    var margin = {top: 10, right: 10, bottom: 20, left: 70},
+    // Variables Governing Individual Divs
+    var margin = {top: 10, right: 10, bottom: 40, left: 70},
         width  = 400 - margin.left - margin.right,
         height = 200 - margin.top  - margin.bottom;
 
@@ -45,6 +46,9 @@
     var parseDate  = d3.time.format("%m/%d/%Y").parse;
     var formatTopDate = d3.time.format("%B %d, 20%y (%A)");
     var classFormatDate = d3.time.format("%y%m%d")
+
+    // Define Number Formatter for .chartDataLabel
+    var chartDataLabelFormatter = d3.format("0,f");
 
     // Get Data and Create The Charts
     d3.csv("citybike_data_transposed.csv", function(error, data) {
@@ -140,8 +144,17 @@
             .append("text")
               .attr("class", "chartLabel")
               .attr("x", 0)
-              .attr("y", height + 16)
+              .attr("y", height + 30)
               .text(function(obj) { return obj.Category; });
+
+          // Bar Chart 8 Data Label Creation
+          barChartSVG.append("g")
+              .datum(d)
+            .append("text")
+              .attr("class", "chartDataLabel")
+              .attr("x", 0)
+              .attr("y", height + 15)
+              .text(null);
 
         });
         
@@ -183,6 +196,7 @@
     //
     //
     // Mouse Interaction Functions
+    // Mouse Over Function
     function mouseOver (d) {
 
       // Create selection with current bar
@@ -193,6 +207,10 @@
 
       // Create selection of all bars with the same class based on the date of the bar Moused Over
       var sameDateBars = d3.selectAll("." + currentBar.attr("class"));
+
+      // Set the text of all the chart's chartDataLabels
+      d3.selectAll(".chartDataLabel")
+          .text(function(d, i) { return chartDataLabelFormatter(sameDateBars.data()[i].value); });
 
       // Transition the color of the bars of the sameDateBars Selection
       sameDateBars
@@ -213,6 +231,10 @@
       // Create selection of all bars with the same class based on the date of the bar Moused Over
       var sameDateBars = d3.selectAll("." + currentBar.attr("class"));
 
+      // Set the text of all the chart's chartDataLabels
+      d3.selectAll(".chartDataLabel")
+          .text(null);
+  
       // Transition the color of the bars of the sameDateBars Selection
       sameDateBars
           .transition()
